Fixed Alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,6 @@ button:focus-visible {
 body {
   margin: 0;
 }
+html, body {
+  overflow-x: hidden;
+}
